RESOLVED FIXED14825
Non-integer hsl() colours are ignored
https://bugs.webkit.org/show_bug.cgi?id=14825
Summary Non-integer hsl() colours are ignored
Philip Taylor
Reported 2007-07-31 06:30:57 PDT
CSS3 Color says the hue in e.g. hsl(120.0, 100%, 50%) is parsed as a <number>, which I think means it can be a non-integer. Mozilla does accept that colour, but WebKit doesn't.
Attachments
patch (162.55 KB, patch)
2007-07-31 10:48 PDT, Sam Weinig
mitz: review+
David Kilzer (:ddkilzer)
Comment 1 2007-07-31 06:41:42 PDT
Verified difference between Firefox 2.0.0.5 (shows green background) and a local debug build of WebKit r24792 with Safari 3 Public Beta v. 3.0.2 (522.12) on Mac OS X 10.4.10 (8R218). Note that Opera 9.21 does not show a green background, either.
David Storey
Comment 2 2007-07-31 06:58:27 PDT
Opera doesn't support HSL yet.
Sam Weinig
Comment 3 2007-07-31 10:05:01 PDT
This is a very easy fix. Just righting up a new layout test for this and I should have a patch up in a little bit.
Sam Weinig
Comment 4 2007-07-31 10:48:10 PDT
mitz
Comment 5 2007-07-31 10:54:59 PDT
Comment on attachment 15760 [details] patch r=me
Sam Weinig
Comment 6 2007-07-31 11:01:06 PDT
Sam Weinig
Comment 7 2007-07-31 11:02:37 PDT
Landed in r24793.
Note You need to log in before you can comment on or make changes to this bug.