LayoutTests:

Reviewed by Mitz.

        Updated tests for http://bugs.webkit.org/show_bug.cgi?id=14825
        Non-integer hsl() colours are ignored

        * fast/css/hsl-color-expected.checksum:
        * fast/css/hsl-color-expected.png:
        * fast/css/hsl-color-expected.txt:
        * fast/css/hsl-color.html: Add non-integer hue tests
        * fast/css/hsla-color-expected.checksum:
        * fast/css/hsla-color-expected.png:
        * fast/css/hsla-color-expected.txt:
        * fast/css/hsla-color.html: Add non-integer hue tests

WebCore:

        Reviewed by Mitz.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=14825
        Non-integer hsl() colours are ignored

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseHSLParameters): Parse hue as a Number,
        not an Integer.



Canonical link: https://commits.webkit.org/19385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24793 268f45cc-cd09-0410-ab3c-d52691b4dbfc